@@ -1,12 +1,12 @@
 #include <unittest/unittest.h>
-#include <thrust/experimental/cuda/pinned_allocator.h>
+#include <thrust/system/cuda/experimental/pinned_allocator.h>
 #include <thrust/host_vector.h>
 #include <thrust/copy.h>
 
 template <typename T>
 void TestPinnedAllocatorSimple(const size_t n)
 {
-  typedef thrust::host_vector<T, thrust::experimental::cuda::pinned_allocator<T> > Vector;
+  typedef thrust::host_vector<T, thrust::cuda::experimental::pinned_allocator<T> > Vector;
 
   Vector h_input = unittest::random_integers<T>(n);
   Vector h_output(n);
