@@ -46,10 +46,10 @@ env.Append(BUILDERS = {'CPPFile' : cpp_from_header_builder})
 extensions = ['.h']
 folders = ['',              # main folder
            'iterator/',
-           'experimental/'
            'system/',
            'system/cpp',
            'system/cuda',
+           'system/cuda/experimental',
            'system/omp',
            'system/tbb']
 
@@ -64,7 +64,8 @@ for folder in folders:
       header_fullpaths.append(fullpath)
       headerfilename = os.path.basename(fullpath)
 
-      sourcefilename = fullpath.replace('/', '_').replace('\\', '_').replace('.h', '.ext')
+      # replace slashes with '_slash_'
+      sourcefilename = fullpath.replace('/', '_slash_').replace('\\', '_slash_').replace('.h', '.ext')
 
       cu  = env.CUFile(sourcefilename.replace('.ext', '.cu'), fullpath)
       cpp = env.CPPFile(sourcefilename.replace('.ext', '_cpp.cpp'), fullpath)
